--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "microcms-js-sdk": "^3.1.1",
         "next": "14.2.3",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "swr": "^2.2.5"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.4.0",
