--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "analyze": "ANALYZE=true pnpm build"
     },
     "dependencies": {
+        "highlight.js": "^11.9.0",
         "microcms-js-sdk": "^3.1.1",
         "next": "14.2.3",
         "react": "^18",
