--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
-        "swr": "^2.2.5"
+        "swr": "^2.2.5",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.4.0",
@@ -40,6 +41,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^7.9.0",
         "@typescript-eslint/parser": "^7.9.0",
         "daisyui": "^4.12.2",
