--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "react": "^18",
         "react-dom": "^18",
         "swr": "^2.2.5",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^1.4.0",
