--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "highlight.js": "^11.9.0",
+        "lucide-react": "^0.396.0",
         "microcms-js-sdk": "^3.1.1",
         "next": "14.2.3",
         "react": "^18",
