--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^18",
         "react-dom": "^18",
         "swr": "^2.2.5",
+        "theme-change": "^2.5.0",
         "uuid": "^10.0.0",
         "zustand": "^4.5.2"
     },
