--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "highlight.js": "^11.9.0",
         "lucide-react": "^0.396.0",
         "microcms-js-sdk": "^3.1.1",
-        "next": "14.2.3",
+        "next": "^14.2.28",
         "react": "^18",
         "react-dom": "^18",
         "swr": "^2.2.5",
@@ -30,14 +30,14 @@
     "devDependencies": {
         "@chromatic-com/storybook": "^1.4.0",
         "@next/bundle-analyzer": "^14.2.3",
-        "@storybook/addon-essentials": "^8.1.1",
-        "@storybook/addon-interactions": "^8.1.1",
-        "@storybook/addon-links": "^8.1.1",
-        "@storybook/addon-onboarding": "^8.1.1",
-        "@storybook/blocks": "^8.1.1",
-        "@storybook/nextjs": "^8.1.1",
-        "@storybook/react": "^8.1.1",
-        "@storybook/test": "^8.1.1",
+        "@storybook/addon-essentials": "^8.5.3",
+        "@storybook/addon-interactions": "^8.5.3",
+        "@storybook/addon-links": "^8.5.3",
+        "@storybook/addon-onboarding": "^8.5.3",
+        "@storybook/blocks": "^8.5.3",
+        "@storybook/nextjs": "^8.5.3",
+        "@storybook/react": "^8.5.3",
+        "@storybook/test": "^8.5.3",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@types/jest": "^29.5.12",
@@ -59,7 +59,7 @@
         "postcss": "^8",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
-        "storybook": "^8.1.1",
+        "storybook": "^8.5.3",
         "tailwindcss": "^3.4.1",
         "ts-jest": "^29.1.2",
         "typescript": "^5"
