fix: resolve conflict

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,18 +1,18 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": [
-    "node_modules",
-    "out",
-    ".next",
-    "bower_components",
-    "jspm_packages",
-    "**/*.stories.tsx",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/*.spec.ts",
-    "**/*.spec.tsx"
-  ],
-  "compilerOptions": {
-    "target": "ES2017"
-  }
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "plugins": [{ "name": "next" }]
+    },
+    "exclude": [
+        "node_modules",
+        "out",
+        ".next",
+        "bower_components",
+        "jspm_packages",
+        "**/*.stories.tsx",
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.spec.ts",
+        "**/*.spec.tsx"
+    ]
 }
